# mlops

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: cleaned_melbourne_data.csv
models/: used_car_sales.pkl
models/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
models/catboost_info/learn/: events.out.tfevents
notebooks/: pipeline.ipynb  sriram_EDA.ipynb  sriram_model_training.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/821688834668103443/: meta.yaml
notebooks/mlruns/821688834668103443/00652f998dce40acab1a899e70b3abf4/: meta.yaml
notebooks/mlruns/821688834668103443/0921e59368f846b09708221ed915f84a/: meta.yaml
notebooks/mlruns/821688834668103443/138271c9d8234beaace28c350292ed3c/: meta.yaml
notebooks/mlruns/821688834668103443/17947a0e8df04850849db9b6467e7e43/: meta.yaml
notebooks/mlruns/821688834668103443/1b6b764af26246ec85ea2dd635d5324f/: meta.yaml
notebooks/mlruns/821688834668103443/591037af46754187b6b70cb0e581f0d4/: meta.yaml
notebooks/mlruns/821688834668103443/5aaf0e10665949a8a753c739224b03bb/: meta.yaml
notebooks/mlruns/821688834668103443/706c93372d8e4c7f8b83e9ce79490ead/: meta.yaml
notebooks/mlruns/821688834668103443/7b3a9c72d3a44491b75c0a93c6df993f/: meta.yaml
notebooks/mlruns/821688834668103443/84c8aed18a8d4ae7a3237781137de57e/: meta.yaml
notebooks/mlruns/821688834668103443/8692a761b1414cf1a9ddfe9328060e08/: meta.yaml
src/: EDA.ipynb  used_car_sales_pipeline.pkl
src/mlruns/0/: meta.yaml
src/mlruns/617165184518790208/: meta.yaml
webapp/: app.py  melbourne_app.py
(+823 files in other folders)
