[project]
name = "mlops-repo"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan",email = "jonathanyapshihao@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "mlflow (==2.8.0)",
    "streamlit (>=1.42.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "mlops_repo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
